--- a/EECIP/Views/Forum/ShowTopic.cshtml
+++ b/EECIP/Views/Forum/ShowTopic.cshtml
@@ -1,6 +1,8 @@
 ﻿@using EECIP.App_Logic.BusinessLogicLayer
 @model EECIP.Models.vmForumTopicView
 @{
+    ViewBag.Title = "  .";
+    ViewBag.ShowBack = true;
     // Set a ViewBag for the category
     var qs = Request.QueryString["order"] ?? string.Empty;
 }
@@ -70,54 +72,76 @@
                 @{
                     Html.RenderPartial("_Post", Model.StarterPost);
                 }
-                @if (Model.TotalCount > 0)
-                {
-                    <div class="row topicstarterpostbeginpostsheading">
-                        <div class="col-md-8 hidden-xs topicstarterpostcomments">
-                            @(Model.TotalCount) Comments
-                        </div>
-                        <div class="col-md-4 topicpostorderfilter">
-                            @if ((Model.TotalCount - 1) > 0)
-                            {
-                                @*<text> Order By:
-                                <a class="orderfilerlink @(string.IsNullOrEmpty(qs) ? "orderfilerlinkactive" : "")" href="@Model.Topic.NiceUrl">@Html.LanguageString("PostFilter.Standard")</a> |
-                                <a class="orderfilerlink @(qs.Contains(PostOrderBy.Newest.ToString()) ? "orderfilerlinkactive" : "")" href="?@AppConstants.PostOrderBy=@PostOrderBy.Newest.ToString()">@Html.LanguageString("PostFilter.Newest")</a> |
-                                <a class="orderfilerlink @(qs.Contains(PostOrderBy.Votes.ToString()) ? "orderfilerlinkactive" : "")" href="?@AppConstants.PostOrderBy=@PostOrderBy.Votes.ToString()">@Html.LanguageString("PostFilter.Votes")</a>
-                                </text>*@
-                            }
-                        </div>
+                <div class="row topicstarterpostbeginpostsheading">
+                    <div class="col-md-8 hidden-xs topicstarterpostcomments">
+                        @(Model.Posts != null ? Model.Posts.Count() : 0) Comments
                     </div>
-                }
+                    <div class="col-md-4 topicpostorderfilter">
+                        @if (Model.Posts != null && Model.Posts.Count() > 1)
+                        {
+                            <text> Order By:
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = 'd', order="" })">Standard</a> |
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = 'd', order="newest" })">Newest</a> |
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = 'd', order="votes" })">Votes</a>
+                            </text>
+                        }
+                    </div>
+                </div>
             </div>
 
             @foreach (var post in Model.Posts)
             {
-                <div>dd</div>
-                //Html.RenderPartial("_Post", post);
+                Html.RenderPartial("_Post", post);
             }
 
             @*@if (Model.TotalPages > 1)
             {
                 <a href="#" class="showmoreposts btn-mvc btn-mvc-large btn-mvc-fullwidth">
-                    <span class="smpactive">@Html.LanguageString("Topic.ShowMorePosts")</span>
+                    <span class="smpactive">Show More Posts</span>
                     <span class="smploading" style="display: none;">@Html.LanguageString("Topic.ShowMorePostsLoading")</span>
                 </a>
             }*@
 
-            @*@if (!Model.Topic.IsLocked)
+            @if (!Model.Topic.IsLocked)
             {
                 <span id="newpostmarker"></span>
 
-                if (!Model.Permissions[SiteConstants.Instance.PermissionDenyAccess].IsTicked && !Model.Permissions[SiteConstants.Instance.PermissionReadOnly].IsTicked && !Model.Topic.Category.IsLocked)
+                if (!Model.DisablePosting)
                 {
-                    @Html.Partial("_CreateNewPost", new CreateAjaxPostViewModel { Topic = Model.Topic.Id, DisablePosting = Model.DisablePosting, PostContent = Model.QuotedPost, InReplyTo = Model.ReplyTo, ReplyToUsername = Model.ReplyToUsername })
+                    <div id="createpostholder">
+                        @using (Ajax.BeginForm("CreatePost", "Forum", null, new AjaxOptions
+                        {
+                            HttpMethod = "POST",
+                            LoadingElementId = "createpostwait",
+                            OnSuccess = "AjaxPostSuccess()",
+                            OnFailure = "AjaxPostError('Error creating post')",
+                            UpdateTargetId = "newpostmarker",
+                            OnBegin = "AjaxPostBegin()"
+                        }, new { @id = "postcodeform" }))
+                        {
+                            <div class="editorholder">
+                                @Html.EditorFor(x => x.NewPostContent)
+                                @*@Html.EditorFor(x => x.NewPostContent, new { @class = "createpost required form-control rte" })*@
+                                @Html.ValidationMessageFor(x => x.NewPostContent)
+                            </div>
+                            <input type="submit" id="createpostbutton" class="btn-mvc-green btn-mvc-large" value="Add Post" />
+                            <span style="display: none;" id="createpostwait" class="ajaxspinner" title="Please Wait">Please Wait</span>
+                            @Html.HiddenFor(x => x.Topic.Id)
+                            @Html.HiddenFor(x => x.Topic.Slug)
+                        }
+
+                    </div>
+
                 }
+
+
+
                 <a id="createpost"></a>
             }
             else
             {
                 <p class="topiclockedmessage">Topic Is Locked</p>
-            }*@
+            }
 
 
             <input type="hidden" id="pageIndex" value="@(Model.PageIndex + 1)" />
