--- a/EECIP/Views/Forum/_Topic.cshtml
+++ b/EECIP/Views/Forum/_Topic.cshtml
@@ -1,15 +1,16 @@
-﻿@model EECIP.App_Logic.DataAccessLayer.TopicOverviewDisplay
+﻿@using EECIP.App_Logic.BusinessLogicLayer;
+@model EECIP.App_Logic.DataAccessLayer.TopicOverviewDisplay
 
 <div class="topicrow topicsticky-@(Model._topic.IsSticky.ToString().ToLower()) topiclocked-@(Model._topic.IsLocked.ToString().ToLower()) topicsolved-@(Model._topic.Solved.ToString().ToLower())">
 
     <div class="rowcreater hidden-xs">
-        <a href="@Model._topic.MembershipUser_Id">
-            @*<img src="@Model.Topic.User.MemberImage(SiteConstants.Instance.GravatarTopicSize)" alt="@Model.Topic.User.UserName">*@
+        <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model._topic.MembershipUser_Id })">
+            <img src="/Content/Images/Users/@(Model._topic.MembershipUser_Id).png" alt="@Model.topicCreator">
         </a>
     </div>
 
     <div class="rowdetails">
-        <p class="category categorysolved@(Model._topic.Solved.ToString().ToLower())" style=" "> <a href="#">Category Name</a></p>
+        @*<p class="category categorysolved@(Model._topic.Solved.ToString().ToLower())" style=" ">Category: <a href="#">Category Name</a></p>*@
         <h3>
             <a title="#" href="@Url.Action("ShowTopic", "Forum", new { slug = Model._topic.Slug })">
                 @if (Model._topic.IsSticky)
@@ -27,6 +28,7 @@
                 @Html.Raw(Model._topic.Name)
             </a>
         </h3>
+        @Utils.ReturnAmountWordsFromString(Utils.StripHtmlFromString(Model._postStart.PostContent), 50)
         @*@if (Model.ShowUnSubscribedLink)
         {
             <p>
@@ -35,34 +37,34 @@
                     @Html.LanguageString("Topic.UnSubscribe")
                 </a>
             </p>
-        }
-        else if (Model.Topic.Tags.Any())
-        {
-            <div class="tagsinput clearfix">
-                @foreach (var tag in Model.Topic.Tags)
-                {
-                    <span class="tag"><span><a href="@Html.Raw(tag.NiceUrl)">@Html.Raw(tag.Tag)</a></span></span>
-                }
-            </div>
         }*@
+
+        @if (Model._topic != null)
+    {
+        <div class="tagsinput clearfix">
+            @foreach (var tag in Model.topicTags)
+        {
+            <span class="tag"><span><a href="@Url.Action("Index", "Forum", new { tag = tag.TopicTag })">@Html.Raw(tag.TopicTag)</a></span></span>
+    }
+        </div>
+}
 
         <p class="topicrowfooterinfo">
             @*<a href="@Html.Raw(Model.LastPostPermaLink)">
                 <img src="@Model.Topic.LastPost.User.MemberImage(SiteConstants.Instance.GravatarLatestBySize)" class="latestby" alt="@Model.Topic.LastPost.User.UserName">
             </a>*@
-            <a href="#">Latest By</a>
-            <a href="@Model.LastPostUserIDX">
-                @Model.LastPostUserName
-            </a>
-            @Model.LastUpdateDatePretty
+            Latest By
+            <a href="@Url.Action("UserCard", "Dashboard", new { strid = Model._postLatest.Post.MembershipUser_Id })">@Model._postLatest.PosterDisplayName</a>
+            @EECIP.App_Logic.BusinessLogicLayer.Utils.GetPrettyDate(Model._postLatest.Post.DateCreated.ToString())
+
             <span class="stats topicanswers"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> @Model.postCount</span>
-            <span class="stats topicviews"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> @Model.Views</span>
+            <span class="stats topicviews"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> @Model._topic.Views</span>
             <span class="stats topicupvotes"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> @Model.upVoteCount</span>
             <span class="stats topicdownvotes"><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> @Model.upVoteCount</span>
             @if (Model._topic.Solved)
-            {
-                <span class="stats topicsolved"><span class="glyphicon glyphicon-ok green-colour" aria-hidden="true"></span></span>
-            }
+        {
+            <span class="stats topicsolved"><span class="glyphicon glyphicon-ok green-colour" aria-hidden="true"></span></span>
+    }
         </p>
 
     </div>
